# secreto-compartido

./: CMakeLists.txt  README.md  cripto_secreto_compartido.cbp  man_info.txt
bmp_library/: CMakeLists.txt
bmp_library/src/: bmp.c  bmp.h
image_secret/: CMakeLists.txt
image_secret/src/: matrix_wrapper.c  matrix_wrapper.h  secret_workflow.c  secret_workflow.h
integration_module/: CMakeLists.txt  cripto_secreto_compartido  main.c
matrix_library/: CMakeLists.txt  libraryMod251.c  libraryMod251.h  matrixLibrary.c  matrixLibrary.h
src/matrix_library/: libraryMod251.c  libraryMod251.h  matrixLibrary.c  matrixLibrary.h
src/steganography/: steg.c  steg.h
steganography/: CMakeLists.txt  steg.c  steg.h
